# pulp-os

./: .gitignore  Cargo.toml  README.md  README.txt  build.rs
assets/: upload.html
kernel/: Cargo.toml
kernel/src/: error.rs  lib.rs
kernel/src/board/: mod.rs
kernel/src/drivers/: input.rs  sdcard.rs  ssd1677.rs  storage.rs  strip.rs
kernel/src/kernel/: app.rs  bookmarks.rs  config.rs  dir_cache.rs  handle.rs  mod.rs  rtc_session.rs  scheduler.rs  tasks.rs  timing.rs  work_queue.rs
kernel/src/ui/: layout.rs  mod.rs  widget.rs
smol-epub/: Cargo.toml
smol-epub/src/: cache.rs  css.rs  epub.rs  html_strip.rs  jpeg.rs  lib.rs  png.rs  xml.rs  zip.rs
src/: board.rs  display.rs  input.rs  lib.rs
src/apps/: bookmarks.rs  files.rs  home.rs  manager.rs  mod.rs  reader.rs  recent.rs  settings.rs  upload.rs
src/apps/reader/: epub_pipeline.rs  epubs.rs  images.rs  mod.rs  paging.rs
src/apps/widgets/: button_feedback.rs  mod.rs  selectable_row.rs
src/board/: action.rs  button.rs  display.rs  mod.rs  pins.rs  raw_gpio.rs  sdcard.rs  strip.rs
src/drivers/: battery.rs  display.rs  input.rs  mod.rs  sdcard.rs  ssd1677.rs  storage.rs  strip.rs
src/fonts/: bitmap.rs  mod.rs
src/formats/: cache.rs  css.rs  epub.rs  html_strip.rs  jpeg.rs  mod.rs  png.rs  xml.rs  zip.rs
src/kernel/: config.rs  mod.rs  poll.rs  scheduler.rs  tasks.rs  wake.rs  work_queue.rs
src/ui/: bitmap_button.rs  bitmap_label.rs  button.rs  button_feedback.rs  label.rs  mod.rs  quick_menu.rs  stack_fmt.rs  statusbar.rs  widget.rs
