[package]
edition      = "2024"
name         = "pulp-os"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "pulp-os"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "log-04", "unstable"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3", "log-04"] }
log                    = "0.4.27"

esp-alloc = { version = "0.9.0", features = ["internal-heap-stats"] }
esp-backtrace = { version = "0.18.1", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
nb = "1.1.0"
embedded-graphics-core = "0.4.1"
embedded-graphics = "0.8.2"
embedded-sdmmc = "0.9.0"
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }


[build-dependencies]
fontdue = "0.9"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
